kube/auth-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  # creationTimestamp: null
  labels:
    io.kompose.service: auth-redis
  name: auth-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      # creationTimestamp: null
      labels:
        # io.kompose.network/auth: "true"
        # io.kompose.network/message-q: "true"
        io.kompose.service: auth-redis
    spec:
      containers:
        - image: redis:alpine
          name: auth-redis
          ports:
            - containerPort: 6379
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: auth-redis-data
      restartPolicy: Always
      volumes:
        - name: auth-redis-data
          persistentVolumeClaim:
            claimName: auth-redis-data
status: {}
