kube/auth-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  # creationTimestamp: null
  labels:
    io.kompose.service: auth-server
  name: auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      # creationTimestamp: null
      labels:
        io.kompose.network/auth: "true"
        io.kompose.network/message-q: "true"
        io.kompose.service: auth-server
    spec:
      containers:
        - env:
            - name: DATABASE
              valueFrom:
                configMapKeyRef:
                  key: DATABASE
                  name: envs--env-production
            - name: DB_DIALECT
              valueFrom:
                configMapKeyRef:
                  key: DB_DIALECT
                  name: envs--env-production
            - name: DB_HOST
              valueFrom:
                configMapKeyRef:
                  key: DB_HOST
                  name: envs--env-production
            - name: DB_PORT
              valueFrom:
                configMapKeyRef:
                  key: DB_PORT
                  name: envs--env-production
            - name: DB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DB_PASSWORD
                  name: envs--env-production
            - name: DB_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: DB_USERNAME
                  name: envs--env-production
            - name: JWT_SECRET_KEY
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET_KEY
                  name: envs--env-production
            - name: REDIS_HOST
              valueFrom:
                configMapKeyRef:
                  key: REDIS_HOST
                  name: envs--env-production
            - name: REDIS_PORT
              valueFrom:
                configMapKeyRef:
                  key: REDIS_PORT
                  name: envs--env-production
            - name: SERVER_PORT
              valueFrom:
                configMapKeyRef:
                  key: SERVER_PORT
                  name: envs--env-production
            - name: KAFKA_HOST_NAME_1
              valueFrom:
                configMapKeyRef:
                  key: KAFKA_HOST_NAME_1
                  name: envs--env-production
            - name: KAFKA_HOST_NAME_2
              valueFrom:
                configMapKeyRef:
                  key: KAFKA_HOST_NAME_2
                  name: envs--env-production
            - name: KAFKA_HOST_NAME_3
              valueFrom:
                configMapKeyRef:
                  key: KAFKA_HOST_NAME_3
                  name: envs--env-production
            - name: KAFKA_HOST_PORT_1
              valueFrom:
                configMapKeyRef:
                  key: KAFKA_HOST_PORT_1
                  name: envs--env-production
            - name: KAFKA_HOST_PORT_2
              valueFrom:
                configMapKeyRef:
                  key: KAFKA_HOST_PORT_2
                  name: envs--env-production
            - name: KAFKA_HOST_PORT_3
              valueFrom:
                configMapKeyRef:
                  key: KAFKA_HOST_PORT_3
                  name: envs--env-production
          image: luciferkala/auth-server
          name: auth-server
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
