kube/auth-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  # creationTimestamp: null
  labels:
    io.kompose.service: auth-postgres
  name: auth-postgres
spec:
  ports:
    - name: "5433"
      port: 5433
      targetPort: 5432
  selector:
    io.kompose.service: auth-postgres
status:
  loadBalancer: {}
