kube/auth-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  # creationTimestamp: null
  labels:
    io.kompose.service: auth-redis
  name: auth-redis
spec:
  ports:
    - name: "6380"
      port: 6380
      targetPort: 6379
  selector:
    io.kompose.service: auth-redis
status:
  loadBalancer: {}
