kube/auth-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  # creationTimestamp: null
  labels:
    io.kompose.service: auth-server
  name: auth-server
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    io.kompose.service: auth-server
status:
  loadBalancer: {}
